--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ckeditor/ckeditor5-vue": "^6.0.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@fullcalendar/vue3": "^6.1.15",
+    "@primevue/themes": "^4.2.5",
     "@tailwindcss/cli": "^4.0.0",
     "@tailwindcss/vite": "^4.0.0",
     "ant-design-vue": "^4.1.2",
@@ -30,6 +31,8 @@
     "file-loader": "^6.2.0",
     "font-awesome": "^4.7.0",
     "material-icons": "^1.13.9",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.2.5",
     "swiper": "^5.3.7",
     "tailwindcss": "^4.0.0",
     "vee-validate": "^4.12.6",
